# orichalcum

./: .gitignore  LICENSE  README  pyproject.toml  requirements.txt
orichalcum/: orichalcum.py  parser.py
